--- a/3b-Bildklassifizierung/3b-draft-colab.ipynb
+++ b/3b-Bildklassifizierung/3b-draft-colab.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Aufgabe 3b: Bildklassifizierung\n",
+    "Für die folgende Problemstellung wurde für die Klassifizierung des cifar10 Datensatzes auf mehrere Neuronale Netze zurückgegriffen. Dieser Datensatz bildet verschieden Objekte in einer Größe von 32x32 Pixel ab. Das Training wurde in Google Colab durchgeführt, das fitten der Netze ohne GPU zu lange dauern würde."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -490,6 +498,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## OneHot\n",
+    "Die verschiedenen Klassen werden onehot encoded."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
@@ -719,6 +735,14 @@
     "    fig.suptitle(\"Model Quality over Epochs\")\n",
     "\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modell 1\n",
+    "Das erste Modell besteht aus 2 Conv Layern. Beim ersten wurde ein padding verwendet damit die Größe der Bilder gleich bleibt.  Um die Parameterzahl zu veringern wurde im ersten Layer ein stride von 2 verwendet und in beiden layern ein maxpooling von 2x2 Feldern. Vor dem Output wurde noch ein Flatten Layer eingefügt der die ausladenden Convoluts auf einen 1 dim array abbildet. Es konnte bereits eine val_acc von ca 56% erreicht werden."
    ]
   },
   {
@@ -1042,6 +1066,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modell 2\n",
+    "Das zweite Modell baut auf Modell 1 auf, führt aber zusätzlich noch ein Dropout ein, der ein overfitting verhindern soll. Mit einer val_acc von ca. 64% ist dieses Modell bereits etwas besser als das Erste, hat aber auch 5000 Parameter mehr, die trainiert werden müssen."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
@@ -1325,6 +1357,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modell 3,\n",
+    "baut wiederum auf den 2. auf hat aber zusätzliche 2 Conv Layer, was sich in zusätzlichen 20000 Parametern und einer 76-prozentigen validation Genauigkeit wiederspiegelt."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -1593,45 +1633,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "x5HoEySMo-eE"
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# model = Sequential()\n",
-    "# model.add(Conv2D(baseMapNum, (3,3), padding='same', kernel_regularizer=regularizers.l2(weight_decay), input_shape=x_train.shape[1:]))\n",
-    "# model.add(Activation('relu'))\n",
-    "# model.add(BatchNormalization())\n",
-    "# model.add(Conv2D(baseMapNum, (3,3), padding='same', kernel_regularizer=regularizers.l2(weight_decay)))\n",
-    "# model.add(Activation('relu'))\n",
-    "# model.add(BatchNormalization())\n",
-    "# model.add(MaxPooling2D(pool_size=(2,2)))\n",
-    "# model.add(Dropout(0.2))\n",
-    "\n",
-    "# model.add(Conv2D(2*baseMapNum, (3,3), padding='same', kernel_regularizer=regularizers.l2(weight_decay)))\n",
-    "# model.add(Activation('relu'))\n",
-    "# model.add(BatchNormalization())\n",
-    "# model.add(Conv2D(2*baseMapNum, (3,3), padding='same', kernel_regularizer=regularizers.l2(weight_decay)))\n",
-    "# model.add(Activation('relu'))\n",
-    "# model.add(BatchNormalization())\n",
-    "# model.add(MaxPooling2D(pool_size=(2,2)))\n",
-    "# model.add(Dropout(0.3))\n",
-    "\n",
-    "# model.add(Conv2D(4*baseMapNum, (3,3), padding='same', kernel_regularizer=regularizers.l2(weight_decay)))\n",
-    "# model.add(Activation('relu'))\n",
-    "# model.add(BatchNormalization())\n",
-    "# model.add(Conv2D(4*baseMapNum, (3,3), padding='same', kernel_regularizer=regularizers.l2(weight_decay)))\n",
-    "# model.add(Activation('relu'))\n",
-    "# model.add(BatchNormalization())\n",
-    "# model.add(MaxPooling2D(pool_size=(2,2)))\n",
-    "# model.add(Dropout(0.4))\n",
-    "\n",
-    "# model.add(Flatten())\n",
-    "# model.add(Dense(num_classes, activation='softmax'))"
+    "## Modell 4,\n",
+    "ist das letzte und mit 6 Conv Layern mit jeweils verdoppelter Neuronenzahl und mehreren Batch und Dropout layerm, das umfassendste Modell. Es hat 310.000 Parameter, die mit GPU Support dennoch recht schnell trainiert werden können. Das Resultat ist eine Testgenauigkeit von ca. 85%. "
    ]
   },
   {
